# arm_isaac_sim2real

./: README.MD  setup_isaac.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_controller/lib/robot_controller/: robot_controller
install/robot_controller/share/robot_controller/: package.sh
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/robot_controller/share/robot_controller/: package.sh
ros2_ws/log/: latest_build
ros2_ws/src/robot_controller/: package.xml  setup.py
src/: README.MD  main.cpp
